# pybind11_build_examples

./: LICENSE  README.md
curve_fit/: CMakeLists.txt  pnp_data.npz  pose_estimation.py  setup.py  test.py  test_pnp.py
curve_fit/src/: curve_fit.cc  pose_estimation.cc
curve_fit_cc/: CMakeLists.txt  curve_fit.cc
numpy_io/: code.cpp  test.py
